pieter_temmerman/session-03/exercise-02/mariadb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mariadb-deployment
  namespace: exercise-02
  labels:
    app: mariadb
    tier: backend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mariadb
        tier: backend
    spec:
      containers:
      - image: bitnami/mariadb:latest
        name: mariadb
        ports:
          - name: mariadb
            containerPort: 3306
