pieter_temmerman/session-03/exercise-02/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: exercise-02
  labels:
    app: wordpress
    tier: frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: bitnami/wordpress:latest
        name: wordpress
        ports:
          - name: http
            containerPort: 80
          - name: https
            containerPort: 443
